--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,25 +1,26 @@
-<header class="p-3 bg-dark text-white">
+<header class="p-4 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
+            <a routerLink="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <span class="navbar-brand mb-0 h1">Logo</span>
             </a>
-
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a routerLink="/" class="nav-link px-2 text-white">Home</a></li>
+                <li><a routerLink="" class="nav-link px-2 text-white">MyProfile</a></li>
+                <li><a routerLink="catalog" class="nav-link px-2 text-white">Catalog</a></li>
             </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                 <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-            </form>
+            </form> -->
 
-            <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+            <div class="text-end" *ngIf="!AuthService.userData">
+                <button type="button" class="btn btn-outline-light me-2" routerLink="/login">Login</button>
+                <button type="button" class="btn btn-warning" routerLink="/register">Sign-up</button>
+            </div>
+            <div class="text-end" *ngIf="AuthService.userData">
+                <h5>{{AuthService.userData.email}}</h5>
+                <button class="btn btn-warning" (click)="logout()">Logout</button>
             </div>
         </div>
     </div>
