--- a/src/app/shared/catalog/catalog.component.html
+++ b/src/app/shared/catalog/catalog.component.html
@@ -1,25 +1,29 @@
 <button routerLink="create" class="btn btn-secondary btn-lg">Create New</button>
 
-<div *ngIf="users.length>0">
+<div *ngIf="items.length>0">
     <div class="album py-5">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
-                    <div class="card" *ngFor="let user of users">
+                    <div class="card" *ngFor="let item of items">
                         <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Title</title>
                             <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                                dy=".3em">{{user.owner}}</text>
+                                dy=".3em">{{item.owner}}</text>
                         </svg>
 
                         <div class="card-body">
-                            <p class="card-text">{{user.price}}</p>
+                            <a [routerLink]="['/catalog/'+item.key]">
+                                {{item.title}}
+                            </a>
+
+                            <p class="card-text">{{item.price}}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button routerLink="edit/:id" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    <button *ngIf="authService.userData" routerLink="edit:id"
+                                        class="btn btn-sm btn-outline-secondary">Edit</button>
                                 </div>
                                 <small class="text-muted">9 mins</small>
                             </div>
