--- a/src/app/CRUD/create/create.component.html
+++ b/src/app/CRUD/create/create.component.html
@@ -1,15 +1,14 @@
 <body>
     <div class="container">
         <header>Create Form</header>
-        <form #myForm="ngForm">
+        <form #myForm="ngForm" (ngSubmit)="submit()">
             <div class="form-group">
                 <input type="text" class="form-control" name="name" [(ngModel)]="model.title" required>
                 <label>Name</label>
             </div>
 
             <div class="form-group">
-
-                <input type="text" class="form-control" name="details" [(ngModel)]="model.type" required>
+                <input type="text" class="form-control" name="type" [(ngModel)]="model.type" required>
                 <label>Type</label>
             </div>
 
@@ -18,20 +17,19 @@
                 <label>Price</label>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="image" [(ngModel)]="model.city" required>
+                <input type="text" class="form-control" name="city" [(ngModel)]="model.city" required>
                 <label>City</label>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="image" [(ngModel)]="model.owner" required>
+                <input type="text" class="form-control" name="owner" [(ngModel)]="model.owner" required>
                 <label>Owner</label>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="image" [(ngModel)]="model.bedrooms" required>
+                <input type="text" class="form-control" name="bedrooms" [(ngModel)]="model.bedrooms" required>
                 <label>Bedrooms</label>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="image" [(ngModel)]="model.image" required>
-                <label>Image</label>
+                <input type="file" class="form-control" name="image" [(ngModel)]="model.image">
             </div>
             <!-- <div class="form-group">
             <label>Subjects</label>
@@ -47,22 +45,6 @@
                 <button>Create</button>
             </div>
         </form>
-        <!-- <div class="auth">
-        Or login with
-    </div> -->
-        <!-- <div class="links">
-        <div class="facebook">
-            <i class="fab fa-facebook-square"><span>Facebook</span></i>
-        </div>
-        <div class="google">
-            <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
-                <i class="fab fa-google-plus-square"><span>Google</span></i>
-            </button>
-        </div>
-    </div> -->
-        <!-- <div class="signup">
-        If you allready got account. <a href="/login">Login here</a>
-    </div> -->
     </div>
 </body>
 
