--- a/src/app/User/user-colection/user-colection.component.html
+++ b/src/app/User/user-colection/user-colection.component.html
@@ -1,6 +1,6 @@
-<div class="card" *ngFor="let item of items" style="width: 22rem;" [routerLink]="['/catalog/'+item.key]">
-    <div *ngIf="item.postOwner===authService.userData.uid">
-        <img class="card-img-top" src="..." alt="Card image cap">
+<div *ngIf="items.length>0; else noItems">
+    <div class="card" *ngFor="let item of items" style="width: 22rem;">
+        <img class="card-img-top" src="assets/thumb1.jpg" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">{{item.title}}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -8,9 +8,14 @@
             <button type="button" [routerLink]="['/catalog/'+item.key]"
                 class="btn btn-sm btn-outline-primary">Details</button>
             <button type="button" [routerLink]="['/edit/'+item.key]"
-                class="btn btn-sm btn-outline-secondary">Edit</button>
-            <button type="button" (click)="CRUD.deleteItem(item.key)"
-                class="btn btn-sm btn-outline-warning">Delete</button>
+                class="btn btn-sm btn-outline-warning">Edit</button>
+            <button type="button" routerLink="/user-colection" (click)="CRUD.deleteItem(item.key)"
+                class="btn btn-sm btn-outline-danger">Delete</button>
         </div>
     </div>
 </div>
+
+<ng-template #noItems>
+    <h1>Make your first post.</h1>
+    <button type="button" class="btn btn-primary" routerLink="/create">Create</button>
+</ng-template>
