--- a/src/app/CRUD/create/create.component.html
+++ b/src/app/CRUD/create/create.component.html
@@ -1,12 +1,11 @@
 <body>
     <div class="container">
         <header>Create Form</header>
-        <form #myForm="ngForm" (ngSubmit)="submit()">
+        <form (ngSubmit)="submit()">
             <div class="form-group">
                 <input type="text" class="form-control" name="name" [(ngModel)]="model.title" required>
                 <label>Name</label>
             </div>
-
             <div class="form-group">
                 <input type="text" class="form-control" name="type" [(ngModel)]="model.type" required>
                 <label>Type</label>
@@ -31,15 +30,6 @@
             <div class="form-group">
                 <input type="file" class="form-control" name="image" [(ngModel)]="model.image">
             </div>
-            <!-- <div class="form-group">
-            <label>Subjects</label>
-            <select class="form-control" name="subjects" [(ngModel)]="subjects">
-                <option value="">Choose value</option>
-                <option *ngFor="let subject of Subjects" [value]="subject">
-                    {{subject}}
-                </option>
-            </select>
-        </div> -->
             <div class="button">
                 <div class="inner"></div>
                 <button>Create</button>
