--- a/src/app/CRUD/edit/edit.component.html
+++ b/src/app/CRUD/edit/edit.component.html
@@ -1,14 +1,13 @@
 <body>
-    <div class="container" (submit)="onSubmit()">
+    <div class="container">
         <header>Edit Form</header>
-        <form #myForm="ngForm" (ngSubmit)="onSubmit()">
+        <form (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <input type="text" class="form-control" name="name" [(ngModel)]="model.title">
                 <label>Name</label>
             </div>
 
             <div class="form-group">
-
                 <input type="text" class="form-control" name="details" [(ngModel)]="model.type">
                 <label>Type</label>
             </div>
