--- a/src/app/User/login/login.component.html
+++ b/src/app/User/login/login.component.html
@@ -1,26 +1,3 @@
-<!-- <div class="displayTable">
-    <div class="displayTableCell">
-        <div class="signin">
-            <h3>Sign In</h3>
-            <div class="formGroup">
-
-                <input type="text" class="form-control" placeholder="Email" #userEmail required>
-
-                <div class="formGroup">
-                    <input type="password" class="formControl" placeholder="Password" #userPassword required>
-                </div>
-                Calling SignIn Api from AuthService -->
-<!-- <div class="formGroup">
-                    <button class="btn btn-primary" (click)="authService.SignIn(userEmail.value, userPassword.value)">
-                        Login
-                    </button>
-                </div>
-            </div>
-            <div class="formGroup">
-                <span class="or"><span class="orInner">Or</span></span>
-            </div> -->
-<!-- Calling GoogleAuth Api from AuthService -->
-
 <body>
     <div class="container">
         <header>Login Form</header>
@@ -31,7 +8,6 @@
             </div>
             <div class="formGroup">
                 <input class="pswrd" type="password" #userPassword name="password" required>
-                <span class="show">SHOW</span>
                 <label>Password</label>
             </div>
             <div class="button">
@@ -43,11 +19,10 @@
             Or login with
         </div>
         <div class="links">
-            <div class="facebook">
-                <i class="fab fa-facebook-square"><span>Facebook</span></i>
-            </div>
             <div class="google">
-                <i class="fab fa-google-plus-square"><span>Google</span></i>
+                <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
+                    <i class="fab fa-google-plus-square"><span>Google</span></i>
+                </button>
             </div>
         </div>
         <div class="signup">
