--- a/src/app/User/user-profile/user-profile.component.html
+++ b/src/app/User/user-profile/user-profile.component.html
@@ -1,26 +1,21 @@
 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     <div class="inner-adjust">
         <div class="pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">User Profile</h1>
+            <h1 class="h2">User Profile:</h1>
         </div>
         <!-- Show user data when logged in -->
         <div class="row" *ngIf="authService.userData">
             <div class="col-md-12">
                 <div class="media">
-                    <img class="align-self-start mr-5" src="{{userData .photoURL}}" alt="{{ userData.email }}" />
+                    <img class="align-self-start mr-5" src="assets/user.png" alt="{{ userData.email }}" />
                     <div class="media-body">
                         <h1>
                             Hello:
                             <strong>{{userData.email}}</strong>
                         </h1>
-                        <p>
-                            User ID: <strong>{{ userData.uid }}</strong>
-                        </p>
-                        <p>
-                            Email: <strong>{{ userData.email }}</strong>
-                        </p>
                     </div>
                 </div>
+                <button class="btn btn-secondary btn-sm " routerLink="/user-edit">Edit Profile</button>
             </div>
         </div>
     </div>
