--- a/src/app/core/navigation/navigation.component.css
+++ b/src/app/core/navigation/navigation.component.css
@@ -1,7 +1,7 @@
-header {
-    background: -webkit-linear-gradient(right, #00dbde, #431944, #00dbde, #cba4cc);
+/* header {
+    background: -webkit-linear-gradient(right, #b19974, #97773c, #48a0a0, #70bed6);
 
-}
+} */
 
 .logo-img {
     height: 40px;
