--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<header class="p-4 bg-info text-white">
+<header class="p-4 bg-info text-white bg-dark">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a routerLink="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -16,7 +16,7 @@
 
             <div class="text-end" *ngIf="!AuthService.userData">
                 <button type="button" class="btn btn-outline-light me-2" routerLink="/login">Login</button>
-                <button type="button" class="btn btn-success" routerLink="/register">Sign-up</button>
+                <button type="button" class="btn btn-primary" routerLink="/register">Sign-up</button>
             </div>
 
             <div class="text-end" *ngIf="AuthService.userData">
