--- a/src/app/shared/catalog/catalog.component.html
+++ b/src/app/shared/catalog/catalog.component.html
@@ -1,24 +1,15 @@
-<div *ngIf="items.length>0">
-    <div class="card" *ngFor="let item of items" style="width: 22rem;" [routerLink]="['/catalog/'+item.key]">
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">{{item.title}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <button type="button" [routerLink]="['/catalog/'+item.key]"
-                class="btn btn-sm btn-outline-secondary">Details</button>
+<div class="top-containter">
+    <div *ngIf="items.length>0">
+        <div class="card" *ngFor="let item of items" style="width: 22rem;" [routerLink]="['/catalog/'+item.key]">
+            <img class="card-img-top" src="assets/thumb1.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{item.title}}</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+                <button type="button" [routerLink]="['/catalog/'+item.key]"
+                    class="btn btn-sm btn-outline-secondary">Details</button>
+            </div>
         </div>
     </div>
 </div>
-
-<ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-        <a class="page-link" href="#">Next</a>
-    </li>
-</ul>
