--- a/src/app/shared/details/details.component.html
+++ b/src/app/shared/details/details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button routerLink="/catalog">Go Back</button>
+    <button class="btn btn-primary" routerLink="/catalog">Go Back</button>
     <br>
     <div>
         <h2 class="page-header justify-content-center border-bottom pb-3 mb-3">{{item.title}}
@@ -7,7 +7,7 @@
         </h2>
         <div class="row">
             <div class="col-md-4">
-                <img style="width:100%" class="thumbnail" src={{item.image}}>
+                <img style="width:100%" class="thumbnail" src="assets/thumb1.jpg">
             </div>
 
             <div class="col-md-8">
@@ -17,9 +17,6 @@
                     <li class="list-group-item">Type: <strong>{{item.type}}</strong></li>
                     <li class="list-group-item">Price:<strong>{{item.price}}</strong> </li>
                 </ul>
-                <!-- <button *ngIf="authService.userData" class="btn btn-primary " [routerLink]="['/edit/'+id]">Edit</button>
-                <button *ngIf="authService.userData" class="btn btn-danger"
-                    (click)="CRUD.deleteItem(id)">Delete</button> -->
             </div>
         </div>
     </div>
