--- a/src/app/shared/home-view/home-view.component.css
+++ b/src/app/shared/home-view/home-view.component.css
@@ -5,7 +5,7 @@ h1 {
 }
 
 h2 {
-	color: #698893;
+	color: #93adb6;
 	margin-bottom: 50px;
 }
 
@@ -23,7 +23,7 @@ mat-toolbar {
 
 .background {
 	align-items: center;
-	background-image: url("/assets/car-bg.jpg");
+	background-image: url("/assets/home-bg.jpg");
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
