--- a/src/app/shared/home-view/home-view.component.html
+++ b/src/app/shared/home-view/home-view.component.html
@@ -1,8 +1,8 @@
 <div class="background">
-    <!-- <h1>Welcome to the NgBytes Dashboard</h1>
-    <h2>Built with &lt;3 by Dottech</h2>
+    <h1>Welcome to Soft-Uni-Angular-Project</h1>
+    <h2>Built by Yordan Manolov</h2>
 
-    <a target="_blank" class="btn" href="https://github.com/puntotech/ngbytes-fireauth">
+    <a target="_blank" class="btn" href="https://github.com/YM-95/SoftUni-Angular-Project">
         Click here to view the source code
-    </a> -->
+    </a>
 </div>
